<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <CheckBox
            android:id="@+id/cb_one_char_derscipt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="@dimen/img_size"
            android:layout_height="match_parent"
            android:text="@string/image" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_name_weight"
            android:text="@string/name" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_kp_weight"
            android:text="@string/kp" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_kp_weight"
            android:text="@string/kpNp" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_kp_weight"
            android:text="@string/kpDot" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_kp_weight"
            android:text="@string/initiative" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_type_weight"
            android:text="@string/type" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="@dimen/add_delete_button_size"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/count_one_char_derscipt"
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_count_weight"
            android:text="@string/count" />

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/line" />

</LinearLayout>