<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/spell_name_weight"
            android:text="@string/spell_name" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/spell_time_weight"
            android:text="@string/time" />

        <TextView
            style="@style/RPGstyleDescript"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/spell_whose_weight"
            android:text="@string/whose" />

        <ImageView
            android:layout_width="@dimen/add_delete_button_size"
            android:layout_height="match_parent" />

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/line" />

</LinearLayout>