<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/character_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pergamin"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:layout_gravity="end"
        android:id="@+id/btnAddListOfCharacters"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height_fight"
        android:background="@drawable/button_background"
        android:text="@string/add_characters" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <CheckBox
            android:id="@+id/cbCheckNewCharacter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivImageNewCharacter"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:background="@drawable/default_character"
            android:focusable="true" />

        <EditText
            android:id="@+id/etNameNewCharacter"
            style="@style/RPGstyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_name_weight"
            android:hint="@string/name"
            android:imeOptions="flagNoExtractUi" />

        <EditText
            android:id="@+id/etKpNewCharacter"
            style="@style/RPGstyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_kp_weight"
            android:hint="@string/kp"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number" />

        <EditText
            android:id="@+id/etKpNpNewCharacter"
            style="@style/RPGstyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_kp_weight"
            android:hint="@string/kpNp"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number" />

        <EditText
            android:id="@+id/etKpDotNewCharacter"
            style="@style/RPGstyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_kp_weight"
            android:hint="@string/kpDot"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number" />

        <EditText
            android:id="@+id/etInitNewCharacter"
            style="@style/RPGstyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_kp_weight"
            android:hint="@string/initiative"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberSigned" />

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_type_weight">

            <Spinner
                android:id="@+id/spTypeChooser"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="center"
                android:spinnerMode="dropdown" />
            <!--<Spinner-->
            <!--android:id="@+id/spTypeChooser"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="@integer/character_type_weight"-->
            <!--android:background="#00000000"-->
            <!--android:gravity="center"-->
            <!--android:spinnerMode="dropdown" />-->
        </LinearLayout>
        <Button
            android:id="@+id/btn_character_add"
            android:layout_width="@dimen/add_delete_button_size"
            android:layout_height="@dimen/add_delete_button_size"
            android:layout_gravity="center"
            android:background="@android:drawable/ic_menu_add" />

        <View
            android:id="@+id/vCountNewCharacter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/character_count_weight"
            android:text="@string/add_characters" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/line" />

    <include
        android:focusableInTouchMode="true"
        android:id="@+id/include_character_descript"
        layout="@layout/one_character_descript" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/character_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="vertical" />

</LinearLayout>
